--- a/css/order.css
+++ b/css/order.css
@@ -240,6 +240,74 @@ body {
 }
 /* sales person styling end */
 
-#tblFilter {
+.dataTable {
+  grid-area: d;
   display: none;
+}
+table {
+  border-collapse: collapse;
+  width: 80%;
+  margin: 50px auto;
+  font-family: "Abril Fatface", serif;
+  font-weight: normal;
+  background-color: white;
+  margin: 10px;
+  border: 1px solid rgb(255, 52, 2);
+}
+
+thead th {
+  color: brown;
+  border: 1px solid rgb(255, 52, 2);
+  padding: 10px;
+}
+tbody td {
+  border: solid 1px rgb(255, 52, 2);
+}
+tr td:nth-child(5) {
+  text-align: right;
+}
+tbody tr:nth-child(odd) {
+  background: rgb(218, 95, 51);
+}
+tbody tr:hover {
+  background: yellow;
+}
+#title {
+  text-align: center;
+}
+.dropbtn {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
