--- a/css/index.css
+++ b/css/index.css
@@ -820,6 +820,55 @@ td {
   color: rgb(255, 30, 0);
   margin-left: 5px;
 }
+.sidenav {
+  height: 100%;
+  width: 100px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background: rgba(253, 252, 252);
+  overflow-x: hidden;
+  padding-top: 20px;
+  display: none;
+  margin-top: 50px;
+}
+.sidenav a,
+.dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+.sidenav a:hover,
+.dropdown-btn:hover {
+  color: #f1f1f1;
+}
+.main {
+  margin-left: 200px; /* Same as the width of the sidenav */
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+.active {
+  background-color: green;
+  color: white;
+}
+.dropdown-container {
+  display: none;
+  background-color: #262626;
+  padding-left: 8px;
+}
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
 
 /* card page styling end */
 
@@ -855,6 +904,9 @@ td {
   .itemCardRow {
     grid-template-columns: 1fr;
     left: 200px;
+  }
+  .sidenav {
+    display: none;
   }
 }
 
