--- a/css/order.css
+++ b/css/order.css
@@ -39,11 +39,12 @@ body {
   border-bottom-left-radius: 32px;
 }
 .item1 {
-  width: 50px;
-  height: 90px;
+  width: 70px;
+  height: 70px;
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  align-items: center;
+  margin-top: 50px;
 }
 .item1:hover {
   background: rgb(247, 29, 0);
@@ -52,8 +53,8 @@ body {
   padding: 5px;
 }
 .icon {
-  width: 100%;
-  height: 90%;
+  width: 50px;
+  height: 50px;
   background-image: url("imges/Home.png");
   background-position: center;
   background-size: cover;
