--- a/css/order.css
+++ b/css/order.css
@@ -18,7 +18,7 @@ body {
   background: rgba(255, 255, 255, 0.5);
   display: grid;
   grid-template-columns: 1fr 3fr 2fr;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 4fr;
   grid-template-areas:
     "a b c"
     "a d e";
@@ -142,12 +142,11 @@ body {
 .orderRecipt {
   grid-area: d;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 .detials {
-  width: 60%;
-  height: 80%;
+  width: 300px;
+  height: 400px;
   background: white;
   padding: 5px;
   display: flex;
@@ -191,7 +190,6 @@ body {
 .salesperson {
   grid-area: e;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 .proPic {
@@ -207,8 +205,8 @@ body {
   padding: 3px;
 }
 .details1 {
-  width: 60%;
-  height: 80%;
+  width: 300px;
+  height: 400px;
   background: white;
   padding: 5px;
   display: flex;
@@ -278,7 +276,7 @@ tbody tr:hover {
 #title {
   text-align: center;
 }
-.dropbtn {
+.dropbtn1 {
   background-color: #4caf50;
   color: white;
   padding: 16px;
@@ -313,4 +311,99 @@ tbody tr:hover {
 }
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
+}
+.hide {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  justify-items: center;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.show {
+  display: block;
+}
+
+@media screen and (max-width: 898px) {
+  .container1 {
+    grid-template-rows: 1fr 2fr 2fr;
+    grid-template-areas:
+      "a b c"
+      "a d d"
+      "a e e";
+  }
+}
+@media screen and (max-width: 546px) {
+  .headTitle {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 376px) {
+  .container1 {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 2fr 2fr;
+    grid-template-areas:
+      "b"
+      "c"
+      "d"
+      "e";
+  }
+  .detials {
+    width: 200px;
+    height: 200px;
+  }
+  .orderRecipt {
+    justify-content: center;
+  }
+  .details1 {
+    width: 200px;
+    height: 200px;
+  }
+  .proPic {
+    width: 50px;
+    height: 50px;
+    display: none;
+  }
+  .sidebar1 {
+    display: none;
+  }
+  .hide {
+    display: block;
+  }
 }
