--- a/css/customer.css
+++ b/css/customer.css
@@ -14,7 +14,7 @@ body {
 }
 /* container styling start */
 .container1 {
-  width: 80%;
+  width: 80vw;
   height: 90vh;
   background: rgba(255, 255, 255, 0.5);
   display: grid;
@@ -27,6 +27,7 @@ body {
   margin-top: 50px;
   border: none;
   border-radius: 32px;
+  margin-left: 0px;
 }
 /* container styling end */
 
@@ -273,6 +274,54 @@ input {
   background-position: center;
   background-size: cover;
 }
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.show {
+  display: block;
+}
+.hide12 {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  justify-items: center;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
 /* Add Customer Styling end */
 
 @media screen and (max-width: 1182px) {
@@ -299,7 +348,7 @@ input {
   }
 }
 
-@media screen and (max-width: 462px) {
+@media screen and (max-width: 500px) {
   .card {
     align-items: flex-start;
     margin: 5px;
@@ -310,15 +359,37 @@ input {
   .headTitle1 h1 {
     font-size: 20px;
   }
+
+  .filter1 .fbtn {
+    width: 100px;
+  }
 }
 @media screen and (max-width: 392px) {
   .container1 {
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 2fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-areas:
       "b "
       "c"
       "d"
       "e";
+  }
+
+  .headTitle1 {
+    justify-items: flex-start;
+  }
+  .customercard {
+    padding-left: 0em;
+  }
+  .headTitle1 {
+    justify-content: flex-start;
+  }
+}
+@media screen and (max-width: 372px) {
+  .hide12 {
+    align-self: flex-start;
+    display: block;
+    margin-right: 10px;
+    margin-left: 10px;
   }
 }
