--- a/css/item.css
+++ b/css/item.css
@@ -16,7 +16,7 @@ body {
 /* container styling start */
 .container4 {
   width: 80vw;
-  height: 90vh;
+  height: 95vh;
   background: rgba(255, 255, 255, 0.7);
   border-radius: 32px;
   display: grid;
@@ -30,8 +30,9 @@ body {
 /* container styling end */
 
 /* sidebar styling start */
-.sidebar1 {
+.sidebar2 {
   grid-area: a;
+
   background: rgba(255, 105, 0, 0.7);
   display: flex;
   flex-direction: column;
@@ -41,26 +42,69 @@ body {
   border-bottom-left-radius: 32px;
 }
 .item1 {
-  width: 10%;
-  height: 10%;
-  margin-bottom: 10px;
-  align-self: center;
-  justify-self: center;
-  width: fit-content;
-  height: fit-content;
+  width: 70px;
+  height: 70px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  margin-top: 20px;
-  padding: 5px;
-  border: none;
+  align-items: center;
+  margin-top: 50px;
 }
 .item1:hover {
   background: rgb(247, 29, 0);
   border-radius: 10px;
   cursor: pointer;
   padding: 5px;
+}
+.icon {
+  width: 50px;
+  height: 50px;
+  background-image: url("imges/Home.png");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 5px;
+}
+.icon1 {
+  width: 100%;
+  height: 90%;
+  background-image: url("imges/Order.png");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 5px;
+}
+.icon2 {
+  width: 100%;
+  height: 90%;
+  background-image: url("imges/Customer.png");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 5px;
+}
+.icon3 {
+  width: 100%;
+  height: 90%;
+  background-image: url("imges/Report.png");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 5px;
+}
+.icon4 {
+  width: 100%;
+  height: 90%;
+  background-image: url("imges/Item.png");
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 5px;
+}
+.name {
+  width: 100%;
+  height: 10%;
+  color: white;
+  font-family: "Abril Fatface", serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-top: 5px;
 }
 /* side bar styling end */
 
@@ -69,6 +113,7 @@ body {
   grid-area: b;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 /* headTitle styling end */
 
@@ -81,8 +126,8 @@ body {
   position: relative;
 }
 .Additemcard {
-  width: 80%;
-  height: 90%;
+  width: 250px;
+  height: 500px;
   background: rgba(250, 114, 2, 0.5);
   border-radius: 32px;
   padding: 10px;
@@ -100,7 +145,7 @@ body {
   height: 30px;
   width: 200px;
   margin-left: 10px;
-  margin-top: 50px;
+  margin-top: 20px;
   border-radius: 10px;
   padding: 10px;
   border: none;
@@ -141,6 +186,17 @@ body {
   color: white;
   margin-right: 10px;
 }
+.Add1 {
+  width: 50%;
+  height: 30px;
+  border: none;
+  background: rgb(253, 80, 0);
+  border-radius: 10px;
+  font-family: "Abril Fatface", serif;
+  color: white;
+  margin-right: 10px;
+  display: none;
+}
 .Cancel {
   width: 50%;
   height: 30px;
@@ -151,12 +207,26 @@ body {
   color: white;
 }
 .picture {
-  width: 200px;
-  height: 200px;
+  width: 110px;
+  height: 250px;
   background: white;
-  margin-left: 10px;
+  margin-left: 55px;
   margin-top: 20px;
-  border-radius: 10px;
+  border-radius: 50%;
+  background-image: url("imges/chicken_submarine-removebg-preview.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.plusIcon {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-image: url("imges/AddIcon.png");
+  background-position: center;
+  background-size: cover;
 }
 /* Add item styling end */
 .itemcardCollection {
@@ -164,6 +234,184 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+.itemCard {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  height: 330px;
+  margin: 10px;
+}
+.itemCard:hover {
+  box-shadow: 10px 10px 12px black;
+  cursor: pointer;
+}
+.cardPic {
+  width: 150px;
+  height: 200px;
+  background: rgb(199, 9, 9);
+  align-self: center;
+  justify-items: center;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.CardPicItem {
+  width: 100px;
+  height: 100px;
+  background-image: url("imges/bugger01-removebg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+  align-self: center;
+  justify-items: center;
+  position: relative;
+  top: 20px;
+  z-index: 111;
+}
+.CardPicItem1 {
+  width: 100px;
+  height: 100px;
+  background-image: url("imges/fries-removebg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+  align-self: center;
+  justify-items: center;
+  position: relative;
+  top: 20px;
+  z-index: 111;
+}
+.CardPicItem2 {
+  width: 100px;
+  height: 100px;
+  background-image: url("imges/Past-removebg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+  align-self: center;
+  justify-items: center;
+  position: relative;
+  top: 20px;
+  z-index: 111;
+}
+.CardPicItem3 {
+  width: 100px;
+  height: 100px;
+  background-image: url("imges/chicken-removebg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+  align-self: center;
+  justify-items: center;
+  position: relative;
+  top: 20px;
+  z-index: 111;
+}
+.cardDetails {
+  padding-top: 60px;
+  width: 150px;
+  height: 400px;
+  background: white;
+  align-self: center;
+  justify-items: center;
+  position: relative;
+  bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 15%;
+}
+.price {
+  width: 150px;
+  height: 30px;
+  background: white;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  border-bottom-left-radius: 15%;
+  border-bottom-right-radius: 15%;
+}
+.plusIcon {
+  width: 25px;
+  height: 25px;
+  background-image: url("imges/Plus.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.plusIcon:hover {
+  border: solid 1px rgb(255, 136, 0);
+}
+.plusIcon:active {
+  border: solid 1px red;
+}
+.price p {
+  font-family: "Abril Fatface", serif;
+}
+.rate {
+  width: 150px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rate p {
+  font-family: "Abril Fatface", serif;
+}
+.star {
+  width: 25px;
+  height: 25px;
+  background-image: url("imges/star.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.namePrce {
+  width: fit-content;
+  height: 30px;
+  align-self: center;
+  justify-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+}
+.stoke {
+  width: 100px;
+  height: 20px;
+  align-self: center;
+  justify-items: center;
+  display: flex;
+  background: white;
+  align-items: center;
+  justify-content: center;
+  color: orangered;
+}
+.line {
+  width: 150px;
+  height: 2px;
+  background: rgb(240, 238, 238);
+}
+.de {
+  width: 100px;
+  height: 20px;
+  align-self: center;
+  justify-items: center;
+  display: flex;
+  background: white;
+  align-items: center;
+  padding-left: 20px;
+}
+.de span {
+  padding-left: 3px;
+}
+
 .editDelete {
   width: 80%;
   height: 40px;
@@ -207,6 +455,90 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.dropbtn1 {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+.hide {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  justify-items: center;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.show {
+  display: block;
 }
 
 @media screen and (max-width: 1350px) {
@@ -258,6 +590,12 @@ body {
 @media screen and (max-width: 794px) {
   .name p {
     display: none;
+  }
+  .sidebar2 {
+    display: none;
+  }
+  .dropbtn3 {
+    display: block;
   }
 }
 @media screen and (max-width: 586px) {
